bug fixed on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -851,11 +851,13 @@ input {
 .locate-me-icon {
     font-size: 28px;
     color: #fff;
+    position: relative;
 }
 
 .add-shelter-icon {
     font-size: 25px;
     color: #fff;
+    position: relative;
 }
 
 /* nolasco patch */
